Validation messages in date time picker

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -107,7 +107,7 @@ form#create-event fieldset{
 }
 
 .form-group.has-error .help-block{
-  display: inherit;
+  display: block;
 }
 
 .form-group.date-time{
