Date time picker position

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -111,6 +111,7 @@ form#create-event fieldset{
 }
 
 .form-group.date-time{
+  position: relative;
   > div{
     display: flex;
     justify-content: space-between;
