Autofocus on first form element

--- a/app/views/event.html
+++ b/app/views/event.html
@@ -27,13 +27,13 @@
       <div>
         <input type="text"
                id="event_start_date_time"
-               min="{{minDate}}"
                aria-label="required input Event start date and time"
                class="custom-validation v-date-start form-control"
                name="event_start_date_time"
-               placeholder=""
                required
-               datetime-picker="dd MMM yyyy HH:mm" ng-model="startDateTime" is-open="isCalendarOpen.start"  />
+               datetime-picker="dd MMM yyyy HH:mm"
+               ng-model="eventData.start_date_time"
+               is-open="isCalendarOpen.start"  />
         <button aria-label="calendar" type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'start')">
           <i class="glyphicon glyphicon-calendar" aria-hidden="true"></i>
         </button>
@@ -44,16 +44,12 @@
         <div>
           <input type="text"
                  datetime-picker="dd MMM yyyy HH:mm"
-                 ng-model="endDateTime"
                  is-open="isCalendarOpen.end"
                  id="event_end_date_time"
-                 ng-min="{{eventData.event_start_date_time}}"
-                 min="{{eventData.event_start_date_time}}"
                  aria-label="required input Event end date and time"
-                 ng-model="eventData.event_end_date_time"
+                 ng-model="eventData.end_date_time"
                  class="custom-validation v-date-end form-control"
                  name="event_end_date_time"
-                 placeholder=""
                  required />
             <button aria-label="calendar" type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'end')">
               <i class="glyphicon glyphicon-calendar" aria-hidden="true"></i>
