--- a/app/views/event.html
+++ b/app/views/event.html
@@ -2,7 +2,7 @@
   <fieldset id="event-basic-info">
     <div class="form-group">
       <label for="event_name">*Name of event</label>
-      <input id="event_name" aria-label="required input Name of event" ng-model="eventData.name" class="custom-validation v-name form-control" type="text" name="event_name" placeholder="Friday`s Dinner" required>
+      <input autofocus input-focus id="event_name" aria-label="required input Name of event" ng-model="eventData.name" class="custom-validation v-name form-control" type="text" name="event_name" placeholder="Friday`s Dinner" required>
     </div>
     <div class="form-group">
       <label for="event_type">*Event type</label>
