--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -6,7 +6,7 @@
   <div class="form-group">
     <label class="control-label" for="user_name">*Full Name
     </label>
-    <input autofocus aria-label="required input full name" required ng-model="user.name" id="user_name" class="custom-validation v-name form-control" type="text" name="name" placeholder="Tony Smith" autocomplete="name">
+    <input input-focus autofocus aria-label="required input full name" required ng-model="user.name" id="user_name" class="custom-validation v-name form-control" type="text" name="name" placeholder="Tony Smith" autocomplete="name">
     <span class='help-block'></span>
   </div>
   <div class="form-group">
