--- a/app/views/event.html
+++ b/app/views/event.html
@@ -62,36 +62,36 @@
   <fieldset id="event-location">
     <div class="form-group" id="location-auto-complete">
       <label for="autocomplete">Address search</label>
-      <input id="autocomplete" aria-label="required input, start type your address"  class="custom-validation v-name  form-control" placeholder="Enter your address" onFocus="geolocate()" type="text">
+      <input id="autocomplete" aria-label="required input, start type your address"  class="custom-validation  form-control" placeholder="Enter your address" onFocus="geolocate()" type="text">
     </div>
     <div id="address">
         <div class="form-group">
           <label for="street_number">*Street address: line 1</label>
-          <input aria-label="required input address street line one" class="custom-validation form-control field" id="street_number" disabled="true" required>
+          <input aria-label="required input address street line one" class="custom-validation form-control field" id="street_number" ng-model="eventData.address.street_number" disabled="true" required>
           <!--<input aria-label="required input address street line two"  class="form-control field" id="route" disabled="true" required>-->
         </div>
       <div class="form-group">
         <label for="street_number">*Street address: line 2</label>
-        <input aria-label="optional input address street line two"  class="custom-validation form-control field" id="route" disabled="true">
+        <input aria-label="optional input address street line two"  class="custom-validation form-control field" id="route" ng-model="eventData.address.route" disabled="true">
       </div>
         <div class="form-group">
           <label for="locality">*City</label>
-          <input class="custom-validation form-control field" aria-label="required input address city" id="locality" disabled="true" required>
+          <input ng-model="eventData.address.locality" class="custom-validation form-control field" aria-label="required input address city" id="locality" disabled="true" required>
         </div>
 
         <div class="form-group">
           <label for="administrative_area_level_1">State</label>
-          <input class="form-control field" aria-label="optional input address state"  id="administrative_area_level_1" disabled="true">
+          <input class="form-control field" aria-label="optional input address state"  ng-model="eventData.address.administrative_area_level_1" id="administrative_area_level_1" disabled="true">
         </div>
 
         <div class="form-group">
           <label for="postal_code">Zip code</label>
-          <input class="form-control field" aria-label="optional input address zip code"  id="postal_code" disabled="true">
+          <input class="form-control field" aria-label="optional input address zip code" ng-model="eventData.address.postal_code" id="postal_code" disabled="true">
         </div>
 
         <div class="form-group">
           <label for="country">*Country</label>
-          <input class="custom-validation form-control field" id="country" aria-label="required input address country"  disabled="true" required>
+          <input class="custom-validation form-control field" id="country" aria-label="required input address country"   ng-model="eventData.address.country"  disabled="true" required>
         </div>
     </div>
   </fieldset>
