--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group">
       <label for="{{user.passwordId}}">*Password (min. 8 characters)</label>
-      <input  aria-label="required input password"  required id="{{user.passwordId}}" ng-model="user.password" class="custom-validation form-control" type="password" name="password" autocomplete="off">
+      <input  aria-label="required input password"  required id="{{user.passwordId}}" ng-model="user.password" class="custom-validation form-control v-password" type="password" name="password" autocomplete="off">
     </div>
     <div class="form-group" ng-class="$scope.formValitidyStatus?'allright':'has-error'">
     <button type="submit" class="btn btn-default" ng-click="login(user)">Submit</button>
