Feat: animation with Proton.js
I want to energize the project with background animation. Possibility of
using Proton.js is tested.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,18 @@ header{
   }
 }
 
+.jumbotron{
+  position: relative;
+  overflow: hidden;
+
+  canvas{
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    opacity: 0.2;
+  }
+}
 form#create-event .form-group#address{
   label{
     display: inline-block;
