--- a/app/styles/_customVariables.scss
+++ b/app/styles/_customVariables.scss
@@ -4,6 +4,7 @@ $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+$gray-lightest:          lighten($gray-base, 95%) !default; // #eee
 
 $brand-primary:         darken(#7F6EB1, 6.5%) !default; // #337ab7
 $brand-success:         #5cb85c !default;
