--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -166,6 +166,7 @@ form#create-event fieldset{
     width: 50%;
     display: inline-block;
     vertical-align: top;
+    background-color: $gray-lightest;
   }
 
 
